colcon_ws/log/build_2022-09-13_04-06-19/gatekeeper/stderr.log
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp: In member function ‘void NominalController::publish_one_trajectory()’:
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:114:13: error: expected ‘;’ before ‘while’
  114 |     T = 15.0
      |             ^
      |             ;
  115 |     while (true){
      |     ~~~~~    
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:111:12: warning: unused variable ‘R’ [-Wunused-variable]
  111 |     double R = 0.5;
      |            ^
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp: In member function ‘void NominalController::joy_callback(sensor_msgs::msg::Joy_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:197:60: warning: unused parameter ‘msg’ [-Wunused-parameter]
  197 |   void joy_callback(const sensor_msgs::msg::Joy::SharedPtr msg){
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
make[2]: *** [CMakeFiles/nominal_controller.dir/build.make:63: CMakeFiles/nominal_controller.dir/src/nominal_controller.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:107: CMakeFiles/nominal_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
